# hyperliquid-copytrader

./: .dockerignore  .gitignore  Dockerfile  README.md  build_mac.py  cancel_orders.py  deploy.env  deploy.sh  deploy_all.sh  docker-compose.yml  env_sample  healthcheck.py  icon.icns  logger_config.py  make-icon.sh  order_bot.py  position_bot.py  pyproject.toml  readme-md .md  requirements.txt  trading_bot_app.py
old/: .envc-00ce  .envc-0d08  .envcopytrader2  .envhypemm
