[tool.poetry]
name = "copytrader"
version = "0.1.0"
description = "A trading bot that copies trades from Hyperliquid accounts"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
eth-account = "0.10.0"
hyperliquid-python-sdk = "0.10.1"
requests = "^2.32.3"
sentry-sdk = "^2.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
